# Managine

./: .gitignore  .gitmodules  Readme.md
binaries/BlockGame/: BlockGame.exp  BlockGame.lib
binaries/ResourceGame/: ResourceGame.exp  ResourceGame.lib
binaries/ResourceGame/ResourceGame/assets/models/Numbers/: five.fbx  six.fbx
binaries/ResourceGame/ResourceGame/assets/models/Port/: Port.dae
binaries/ResourceGame/ResourceGame/assets/models/Ressources/: Ore.fbx
binaries/ResourceGame/ResourceGame/assets/models/Ressources/Mines/: Guindaste.fbx  card.dae  farm.dae  woodcut.dae
binaries/ResourceGame/ResourceGame/assets/models/SmallSpaceFighter/: SmallSpaceFighterWithUV.mtl
binaries/ResourceGame/ResourceGame/assets/shader/object/: fragmentMaterialGlowShader.fs  fragmentShader.fs
binaries/ResourceGame/ResourceGame/assets/shader/skeletalMesh/: fragmentSkeletalMeshShader.fs
binaries/ResourceGame/ResourceGame/assets/shader/skybox/: vertexSkyBoxShader.vs
binaries/ResourceGame/ResourceGame/assets/shader/terrain/: fragmentTerrainShader.fs
binaries/ResourceGame/ResourceGame/assets/shader/water/: fragmentWaterShader.fs  vertexWaterShader.vs
code/: .gitignore  CMakeLists.txt  Readme.md
code/asset_management/: CMakeLists.txt
code/asset_management/include/engine/assets/: assets.h  bitmap.h  heightMapGenerator.h  model.h  sound.h  text.h  texture.h
code/asset_management/src/: inmp.cxx
code/assets/models/: Cube.fbx
code/assets/models/Character/: Character.fbx
code/assets/models/House/Dwarf_House/: house.fbx
code/assets/models/Numbers/: four.fbx  one.fbx  three.fbx  two.fbx
code/assets/models/Player/: Player.fbx  Player2.fbx
code/assets/models/Ressources/: Rock.fbx  Wood.fbx
code/assets/shader/object/: fragmentMaterialGlowShader.fs  fragmentMaterialShader.fs  fragmentShader.fs  vertexShader.vs
code/assets/shader/shadow/: fragmentShadowShader.fs  geometryShadowShader.gs  vertexDirectionalShadowShader.vs  vertexShadowShader.vs
code/assets/shader/skeletalMesh/: fragmentSkeletalMeshShader.fs  vertexSkeletalMeshShader.vs
code/assets/shader/skybox/: fragmentSkyBoxShader.fs  vertexSkyBoxShader.vs
code/assets/shader/terrain/: fragmentTerrainShader.fs  vertexTerrainShader.vs
code/assets/shader/water/: fragmentWaterShader.fs  vertexWaterShader.vs
code/blockGame/: CMakeLists.txt
code/blockGame/src/: blockGame.cxx  blockGame.h  main.cxx  mainCamera.cxx  mainCamera.h  mainCharacter.cxx  mainCharacter.h  mainUI.cxx  mainUI.h  world.cxx  world.h
code/cmake/module/: Findirrklang.cmake.txt
code/docs/: CMakeLists.txt
code/engine/: CMakeLists.txt
code/engine/include/engine/: actor.h  engine.h
code/engine/include/engine/callbacks/: event.h
code/engine/include/engine/context/: context.h  input.h
code/engine/include/engine/memory/: linear_array.h  pool.h
code/engine/src/: actor.cxx  context.cxx  engine.cxx
code/physics/: CMakeLists.txt
code/physics/include/engine/physics/: maths.h  physics.h
code/physics/src/: physics.cxx
code/renderer/: CMakeLists.txt
code/renderer/include/engine/renderer/: Lights.h  camera.h  framebuffer.h  lightTypes.h  mesh.h  renderable.h  renderer.h  resource.h  resourceCollector.h  shader.h  shadow.h  skeletalMesh.h  skyBox.h  terrain.h  transform.h  water.h  worldObject.h
code/renderer/src/: Lights.cxx  camera.cxx  error.h  framebuffer.cxx  mesh.cxx  renderer.cxx  resource.cxx  resourceCollector.cxx  shader.cxx  shadow.cxx  skeletalMesh.cxx  skyBox.cxx  terrain.cxx  transform.cxx  water.cxx  worldObject.cxx
code/resourceGame/: CMakeLists.txt
code/resourceGame/src/: collectables.cxx  collectables.h  main.cxx  mainCamera.cxx  mainCamera.h  mainCharacter.cxx  mainCharacter.h  mainUI.cxx  mainUI.h  resourceGame.cxx  resourceGame.h  resources.cxx  resources.h  world.cxx  world.h
code/ui/: CMakeLists.txt
code/ui/include/engine/ui/: ui.h
code/ui/src/: ui.cxx
documentation/: API Documentation.lnk  readme (Dev Docs).txt
documentation/html/: _lights_8h.html  _lights_8h__incl.map  _lights_8h__incl.md5  _lights_8h_source.html  actor_8h.html  actor_8h__dep__incl.map  actor_8h__dep__incl.md5  actor_8h__incl.map  actor_8h__incl.md5  actor_8h_source.html  annotated.html  assets_8h.html  assets_8h__dep__incl.map  assets_8h__dep__incl.md5  assets_8h__incl.map  assets_8h__incl.md5  assets_8h_source.html  bitmap_8h.html  bitmap_8h__dep__incl.map  bitmap_8h__dep__incl.md5  bitmap_8h__incl.map  bitmap_8h__incl.md5  bitmap_8h_source.html  camera_8h.html  camera_8h__dep__incl.map  camera_8h__dep__incl.md5  camera_8h__incl.map  camera_8h__incl.md5  camera_8h_source.html  classengine_1_1_actor-members.html  classengine_1_1_actor.html  classengine_1_1_engine-members.html  classengine_1_1_engine.html  classengine_1_1_engine__coll__graph.map  classengine_1_1_engine__coll__graph.md5  classengine_1_1assets_1_1_bitmap-members.html  classengine_1_1assets_1_1_bitmap.html  classengine_1_1assets_1_1_height_map_generator-members.html  classengine_1_1assets_1_1_height_map_generator.html  classengine_1_1assets_1_1_height_map_generator__coll__graph.map  (+537 more)
documentation/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  (+80 more)
